--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--    Servlet Dependency  -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
