--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,14 @@
             <version>5.0.0.RELEASE</version>
         </dependency>
 
-        <!--    JSTL Dependency -->
+        <!--    Spring Security Taglib support   -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>5.6.2</version>
+        </dependency>
+
+        <!--    JSTL Dependency    -->
         <dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
             <artifactId>javax.servlet.jsp.jstl-api</artifactId>
@@ -58,7 +65,7 @@
             <version>1.2</version>
         </dependency>
 
-        <!--    JSP Dependency  -->
+        <!--    JSP Dependency   -->
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>javax.servlet.jsp-api</artifactId>
@@ -84,31 +91,31 @@
                     <artifactId>maven-war-plugin</artifactId>
                     <version>3.2.2</version>
                 </plugin>
-<!--                <plugin>-->
-<!--                    <artifactId>maven-clean-plugin</artifactId>-->
-<!--                    <version>3.1.0</version>-->
-<!--                </plugin>-->
-<!--                &lt;!&ndash; see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging &ndash;&gt;-->
-<!--                <plugin>-->
-<!--                    <artifactId>maven-resources-plugin</artifactId>-->
-<!--                    <version>3.0.2</version>-->
-<!--                </plugin>-->
-<!--                <plugin>-->
-<!--                    <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                    <version>3.8.0</version>-->
-<!--                </plugin>-->
-<!--                <plugin>-->
-<!--                    <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                    <version>2.22.1</version>-->
-<!--                </plugin>-->
-<!--                <plugin>-->
-<!--                    <artifactId>maven-install-plugin</artifactId>-->
-<!--                    <version>2.5.2</version>-->
-<!--                </plugin>-->
-<!--                <plugin>-->
-<!--                    <artifactId>maven-deploy-plugin</artifactId>-->
-<!--                    <version>2.8.2</version>-->
-<!--                </plugin>-->
+                <!--                <plugin>-->
+                <!--                    <artifactId>maven-clean-plugin</artifactId>-->
+                <!--                    <version>3.1.0</version>-->
+                <!--                </plugin>-->
+                <!--                &lt;!&ndash; see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging &ndash;&gt;-->
+                <!--                <plugin>-->
+                <!--                    <artifactId>maven-resources-plugin</artifactId>-->
+                <!--                    <version>3.0.2</version>-->
+                <!--                </plugin>-->
+                <!--                <plugin>-->
+                <!--                    <artifactId>maven-compiler-plugin</artifactId>-->
+                <!--                    <version>3.8.0</version>-->
+                <!--                </plugin>-->
+                <!--                <plugin>-->
+                <!--                    <artifactId>maven-surefire-plugin</artifactId>-->
+                <!--                    <version>2.22.1</version>-->
+                <!--                </plugin>-->
+                <!--                <plugin>-->
+                <!--                    <artifactId>maven-install-plugin</artifactId>-->
+                <!--                    <version>2.5.2</version>-->
+                <!--                </plugin>-->
+                <!--                <plugin>-->
+                <!--                    <artifactId>maven-deploy-plugin</artifactId>-->
+                <!--                    <version>2.8.2</version>-->
+                <!--                </plugin>-->
             </plugins>
         </pluginManagement>
     </build>
