--- a/pom.xml
+++ b/pom.xml
@@ -14,86 +14,116 @@
     <url>http://www.example.com</url>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <springframework.version>5.2.5.RELEASE</springframework.version>
+        <springsecurity.version>5.3.1.RELEASE</springsecurity.version>
+        <hibernate.version>5.4.14.Final</hibernate.version>
+        <mysql.connector.version>8.0.19</mysql.connector.version>
+        <c3po.version>0.9.5.2</c3po.version>
+
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
 
-        <!--    Spring MVC support  -->
+        <!-- Spring MVC support -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.0.2.RELEASE</version>
+            <version>${springframework.version}</version>
         </dependency>
 
-        <!--    Spring Security  -->
+        <!-- Spring Security -->
+        <!-- spring-security-web and spring-security-config -->
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>5.0.0.RELEASE</version>
+            <version>${springsecurity.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>5.0.0.RELEASE</version>
+            <version>${springsecurity.version}</version>
         </dependency>
 
-        <!--    Spring Security Taglib support   -->
+        <!-- Add Spring Security Taglibs support -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
-            <version>5.6.2</version>
+            <version>${springsecurity.version}</version>
         </dependency>
 
-        <!--    JSTL Dependency    -->
+        <!-- Spring Transactions -->
         <dependency>
-            <groupId>javax.servlet.jsp.jstl</groupId>
-            <artifactId>javax.servlet.jsp.jstl-api</artifactId>
-            <version>1.2.2</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${springframework.version}</version>
         </dependency>
+
+        <!-- Spring ORM -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+
+        <!-- Hibernate Core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <!-- Add MySQL and C3P0 support -->
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.connector.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>${c3po.version}</version>
+        </dependency>
+
+
+        <!-- Servlet, JSP and JSTL support -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
 
-        <!--    JSP Dependency   -->
         <dependency>
-            <groupId>javax.servlet.jsp</groupId>
-            <artifactId>javax.servlet.jsp-api</artifactId>
-            <version>2.3.3</version>
-            <scope>provided</scope>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
         </dependency>
 
-        <!--    Servlet Dependency  -->
+        <!-- Hibernate Validator -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>provided</scope>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.7.Final</version>
         </dependency>
 
-        <!--    MySQl   -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.28</version>
-        </dependency>
-
-        <!--    C3P0   -->
-        <dependency>
-            <groupId>com.mchange</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.5.5</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -104,31 +134,6 @@
                     <artifactId>maven-war-plugin</artifactId>
                     <version>3.2.2</version>
                 </plugin>
-                <!--                <plugin>-->
-                <!--                    <artifactId>maven-clean-plugin</artifactId>-->
-                <!--                    <version>3.1.0</version>-->
-                <!--                </plugin>-->
-                <!--                &lt;!&ndash; see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging &ndash;&gt;-->
-                <!--                <plugin>-->
-                <!--                    <artifactId>maven-resources-plugin</artifactId>-->
-                <!--                    <version>3.0.2</version>-->
-                <!--                </plugin>-->
-                <!--                <plugin>-->
-                <!--                    <artifactId>maven-compiler-plugin</artifactId>-->
-                <!--                    <version>3.8.0</version>-->
-                <!--                </plugin>-->
-                <!--                <plugin>-->
-                <!--                    <artifactId>maven-surefire-plugin</artifactId>-->
-                <!--                    <version>2.22.1</version>-->
-                <!--                </plugin>-->
-                <!--                <plugin>-->
-                <!--                    <artifactId>maven-install-plugin</artifactId>-->
-                <!--                    <version>2.5.2</version>-->
-                <!--                </plugin>-->
-                <!--                <plugin>-->
-                <!--                    <artifactId>maven-deploy-plugin</artifactId>-->
-                <!--                    <version>2.8.2</version>-->
-                <!--                </plugin>-->
             </plugins>
         </pluginManagement>
     </build>
