--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -1,8 +1,8 @@
 #
 # JDBC connection properties
 #
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/spring_security_demo?useSSL=false
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/spring_security_custom_user_demo?useSSL=false&serverTimezone=UTC
 jdbc.user=hbstudent
 jdbc.password=hbstudent
 
@@ -13,3 +13,10 @@ connection.pool.initialPoolSize=5
 connection.pool.minPoolSize=5
 connection.pool.maxPoolSize=20
 connection.pool.maxIdleTime=3000
+
+#
+# Hibernate properties
+#
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.show_sql=true
+hibernate.packagesToScan=org.example.noxml.entity
